--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="karatecandiac.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <ul class="mainmenu">
