--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <ul class="mainmenu">
-<li><a id="kata1vid">1er kata</a></li>
-<li><a id="kata3vid">3e kata</a></li>
-<li><a id="kata4vid">4e kata</a></li>
-<li><a id="kata5vid">5e kata</a></li>
-<li><a id="forme1vid">1ere forme</a></li>
-<li><a id="forme2vid">2e forme</a></li>
-<li><a id="forme3vid">3e forme</a></li>
+<li><a class="vid" vid="MGLl88TYl5w">1er kata</a></li>
+<li><a class="vid" vid="paWbNEikEMs">3e kata</a></li>
+<li><a class="vid" vid="I0nNKv1i3sw">4e kata</a></li>
+<li><a class="vid" vid="Jqd4ae9Ttzw">5e kata</a></li>
+<li><a class="vid" vid="uYK-XqdvPwE">1ere forme</a></li>
+<li><a class="vid" vid="VgroTAimb_Y">2e forme</a></li>
+<li><a class="vid" vid="WLOAWwEdWLc">3e forme</a></li>
 </ul>
 </body>
-</html
+</html>
