--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 </head>
 <body>
 <ul class="mainmenu">
-<li><a class="vid" vid="MGLl88TYl5w">1er kata</a></li>
-<li><a class="vid" vid="paWbNEikEMs">3e kata</a></li>
-<li><a class="vid" vid="I0nNKv1i3sw">4e kata</a></li>
-<li><a class="vid" vid="Jqd4ae9Ttzw">5e kata</a></li>
-<li><a class="vid" vid="uYK-XqdvPwE">1ere forme</a></li>
-<li><a class="vid" vid="VgroTAimb_Y">2e forme</a></li>
-<li><a class="vid" vid="WLOAWwEdWLc">3e forme</a></li>
+<li><a vid="MGLl88TYl5w">1er kata</a></li>
+<li><a vid="paWbNEikEMs">3e kata</a></li>
+<li><a vid="I0nNKv1i3sw">4e kata</a></li>
+<li><a vid="Jqd4ae9Ttzw">5e kata</a></li>
+<li><a vid="uYK-XqdvPwE">1ere forme</a></li>
+<li><a vid="VgroTAimb_Y">2e forme</a></li>
+<li><a  vid="WLOAWwEdWLc">3e forme</a></li>
+<li><a vid="CMnDsqifIr4">1er pinan</a></li>
+<li><a vid="tgbEGk7idoE">2e pinan</a></li>
+<li><a  vid="ajeiHPHwOXI">3e pinan</a></li>
+<li><a vid="U0nlcAD_G3Y">4e pinan</a></li>
+<li><a vid="bOd0dHKFv9k">5e pinan</a></li>
+<li><a vid="P4eFTcIpRq4">Naihanchi 1</a></li>
 </ul>
 </body>
 </html>
