--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="karatecandiac.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<ul class="mainmenu">
-<li><a vid="MGLl88TYl5w">1er kata</a></li>
-<li><a vid="paWbNEikEMs">3e kata</a></li>
-<li><a vid="I0nNKv1i3sw">4e kata</a></li>
-<li><a vid="Jqd4ae9Ttzw">5e kata</a></li>
-<li><a vid="uYK-XqdvPwE">1ere forme</a></li>
-<li><a vid="VgroTAimb_Y">2e forme</a></li>
-<li><a  vid="WLOAWwEdWLc">3e forme</a></li>
-<li><a vid="CMnDsqifIr4">1er pinan</a></li>
-<li><a vid="tgbEGk7idoE">2e pinan</a></li>
-<li><a  vid="ajeiHPHwOXI">3e pinan</a></li>
-<li><a vid="U0nlcAD_G3Y">4e pinan</a></li>
-<li><a vid="bOd0dHKFv9k">5e pinan</a></li>
-<li><a vid="P4eFTcIpRq4">Naihanchi 1</a></li>
+<ul class="mainmenu menu">
+<li><a tar="videos.html">Vidéos</a></li>
 </ul>
 </body>
 </html>
