--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <ul class="mainmenu menu">
-<li><a tar="videos.html">Vidéos</a></li>
+<li><a tar="videos.html">Vidéos des katas</a></li>
+<li><a tar="techniques.html">Techniques (PDF)</a></li>
 </ul>
 </body>
 </html>
