--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<img src="images/logo_main.png" class="logo">
 <ul class="mainmenu menu">
 <li><a tar="videos.html">Vidéos des katas</a></li>
 <li><a tar="techniques.html">Techniques (PDF)</a></li>
