--- a/videos.html
+++ b/videos.html
@@ -14,10 +14,11 @@
 <li class="orange"><a vid="Jqd4ae9Ttzw">5e kata</a></li>
 <li class="verte"><a vid="uYK-XqdvPwE">1ere forme</a></li>
 <li class="verte"><a vid="VgroTAimb_Y">2e forme</a></li>
-<li class="verte"><a  vid="WLOAWwEdWLc">3e forme</a></li>
+<li class="verte"><a vid="WLOAWwEdWLc">3e forme</a></li>
+<li class="verte"><a vid="40981971">Midolo motto wasa</a></li>
 <li class="bleue"><a vid="CMnDsqifIr4">1er pinan</a></li>
 <li class="bleue"><a vid="tgbEGk7idoE">2e pinan</a></li>
-<li class="bleue"><a  vid="ajeiHPHwOXI">3e pinan</a></li>
+<li class="bleue"><a vid="ajeiHPHwOXI">3e pinan</a></li>
 <li class="brune"><a vid="U0nlcAD_G3Y">4e pinan</a></li>
 <li class="brune"><a vid="bOd0dHKFv9k">5e pinan</a></li>
 <li class="noire"><a vid="P4eFTcIpRq4">Naihanchi 1</a></li>
