--- a/techniques.html
+++ b/techniques.html
@@ -9,7 +9,7 @@
 <body>
 <ul class="techmenu menu">
 <li><a tar="http://www.karatecandiac.com/TechniquesJaune.pdf">Ceinture jaune</a></li>
-<li><a href="http://www.karatecandiac.com/TechniquesOrange.pdf">Ceinture orange</a></li>
+<li><a tar="http://www.karatecandiac.com/TechniquesOrange.pdf">Ceinture orange</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesVerte.pdf">Ceinture verte</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesBleue.pdf">Ceinture bleue</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesBrune.pdf">Ceinture brune</a></li>
