--- a/techniques.html
+++ b/techniques.html
@@ -13,6 +13,7 @@
 <li><a tar="http://www.karatecandiac.com/TechniquesVerte.pdf">Ceinture verte</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesBleue.pdf">Ceinture bleue</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesBrune.pdf">Ceinture brune</a></li>
+ <span id="ready"></span>
 </ul>
 </body>
 </html>
