--- a/videos.html
+++ b/videos.html
@@ -19,7 +19,7 @@
 <li class="bleue"><a vid="CMnDsqifIr4">1er pinan</a></li>
 <li class="bleue"><a vid="tgbEGk7idoE">2e pinan</a></li>
 <li class="bleue"><a vid="ajeiHPHwOXI">3e pinan</a></li>
-<li class="verte"><a vid="40983436">Ao motto wasa</a></li>
+<li class="bleue"><a vid="40983436">Ao motto wasa</a></li>
 <li class="brune"><a vid="U0nlcAD_G3Y">4e pinan</a></li>
 <li class="brune"><a vid="bOd0dHKFv9k">5e pinan</a></li>
 <li class="noire"><a vid="P4eFTcIpRq4">Naihanchi 1</a></li>
