--- a/techniques.html
+++ b/techniques.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="karatecandiac.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body onload="load();">
 <ul class="techmenu menu">
 <li><a tar="http://www.karatecandiac.com/TechniquesJaune.pdf">Ceinture jaune</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesOrange.pdf">Ceinture orange</a></li>
@@ -15,5 +14,6 @@
 <li><a tar="http://www.karatecandiac.com/TechniquesBrune.pdf">Ceinture brune</a></li>
 </ul>
 <span id="ready">url</span>
+<script src="karatecandiac.js"></script>
 </body>
 </html>
