--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="karatecandiac.js"></script>
 </head>
-<body onload="load();">
+<body>
 <img src="images/logo_main.png" class="logo">
 <ul class="mainmenu menu">
 <li><a tar="videos.html">Vidéos des katas</a></li>
