--- a/techniques.html
+++ b/techniques.html
@@ -5,7 +5,7 @@
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="load();">
+<body>
 <ul class="techmenu menu">
 <li><a tar="http://www.karatecandiac.com/TechniquesJaune.pdf">Ceinture jaune</a></li>
 <li><a tar="http://www.karatecandiac.com/TechniquesOrange.pdf">Ceinture orange</a></li>
