--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="images/logo_main.png" class="logo">
 <ul class="mainmenu menu">
 <li><a tar="videos.html">Vidéos des katas</a></li>
-<li><a tar="techniques.html">Techniques (PDF)</a></li>
+<!-- <li><a tar="techniques.html">Techniques (PDF)</a></li> -->
 </ul>
 </body>
 </html>
